# warehouse

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE.txt  Makefile  deny.toml  diesel.toml
migrations/2025-11-01-210820-0000_create_users/: up.sql
migrations/2025-12-13-232239-0000_create_rbac_tables/: down.sql  up.sql
server/: Cargo.toml  Makefile
src/: apidoc.rs  config.rs  contract.rs  db.rs  dependency.rs  domain.rs  lib.rs  main.rs  rest.rs  routes.rs  server.rs  state.rs  telemetry.rs  web.rs
src/contract/: error.rs  http.rs  repository.rs
src/contract/repository/: error.rs  role.rs  rule.rs  user.rs
src/domain/: auth.rs  error.rs  role.rs  rule.rs  user.rs
src/dto/: auth.rs  error.rs
src/repository/: postgresql.rs
src/repository/postgresql/: models.rs  role.rs  rule.rs  schema.rs  user.rs
src/rest/: auth.rs  error.rs  health_check.rs
src/routes/: auth.rs  error.rs  user_repository.rs
src/service/: auth.rs
src/web/: app.rs  client.rs  component.rs  error.rs  middleware.rs  page.rs  utils.rs
src/web/component/: auth.rs  error.rs  side_bar.rs  toast.rs  top_bar.rs
src/web/page/: home.rs  not_found.rs  sign_in.rs  sign_up.rs
src/web/style/: main.sass  main.scss  side_bar.sass  toast.sass  top_bar.sass
src/web/utils/: app.rs  auth.rs  http.rs
tests/api/: auth_sign_in.rs  auth_sign_up.rs  auth_signup.rs  health_check.rs  helpers.rs  main.rs
