[package]
name = "warehouse"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.txt"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
diesel = { version = "2.3.3", features = ["uuid"] }
diesel-async = { version = "0.7.3", features = ["postgres", "deadpool"] }
deadpool = "0.12.3"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
config = { version = "0.15.18", default-features = false }
dotenvy = "0.15.7"
async-trait = "0.1.89"
tracing-bunyan-formatter = "0.3"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
trace_id = { version = "0.1.1", features = ["axum"] }
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
serde_json = "1.0.95"
chrono = { version = "0.4.34", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["timeout"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
rand = "0.9.2"
despatma = { git = "https://github.com/libmonsoon-dev/despatma", branch = "embedded-dependency" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
diesel_migrations = "2.3.0"
diesel = { version = "2.3.3", features = ["uuid", "postgres"] }
claims = "0.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
fake = "4.4.0"
pretty_assertions = "1.4.1"